# INF442

./: CMakeLists.txt  DSU.hpp  ER-digraph.cpp  ER_data_analysis.ipynb  README.md  data_analysis.ipynb  dbscan.cpp  dbscan.hpp  dbscan_v2.cpp  gen_ER_data.cpp  gen_ER_graph.cpp  gen_points_data.cpp  kosaraju.cpp  kosaraju.hpp  main.cpp  main_dbscan_dmatrix.cpp  main_dbscan_point.cpp  main_kosaraju.cpp  task2.cpp
backup/: bfs.cpp  dbscan_v1.cpp  dbscan_v1.hpp
csv/: ER_10000_3.csv  ER_10000_4.csv  ER_1000_4.csv  ER_1000_7.csv  ER_100_1.csv  ER_100_2.csv  ER_100_6.csv  ER_100_7.csv  ER_100_9.csv  ER_10_1.csv  ER_10_3.csv  ER_10_4.csv  ER_10_5.csv  ER_10_7.csv  ER_10_9.csv  dmatrix.csv  points_XY_100_4_0.csv  points_XY_100_4_1.csv  points_XY_100_4_10.csv  points_XY_100_4_11.csv  points_XY_100_4_12.csv  points_XY_100_4_13.csv  points_XY_100_4_14.csv  points_XY_100_4_15.csv  points_XY_100_4_16.csv  points_XY_100_4_17.csv  points_XY_100_4_18.csv  points_XY_100_4_19.csv  points_XY_100_4_2.csv  points_XY_100_4_20.csv  points_XY_100_4_21.csv  points_XY_100_4_22.csv  points_XY_100_4_23.csv  points_XY_100_4_24.csv  points_XY_100_4_25.csv  points_XY_100_4_26.csv  points_XY_100_4_27.csv  points_XY_100_4_28.csv  points_XY_100_4_29.csv  points_XY_100_4_3.csv  (+26 more)
data/: ER_10000_1.csv  ER_10000_2.csv  ER_1000_1.csv  ER_1000_2.csv  ER_1000_3.csv  ER_1000_5.csv  ER_1000_6.csv  ER_1000_8.csv  ER_1000_9.csv  ER_100_3.csv  ER_100_4.csv  ER_100_5.csv  ER_100_8.csv  ER_10_2.csv  ER_10_6.csv  ER_10_8.csv
dataset/: ER_graph.txt  Wiki-Vote.txt
dbscan/: DSU.hpp  dbscan.cpp  dbscan.hpp
(+7 files in other folders)
